fix: [CDS-82437]: Fixed overflowing of AIDA copilot text in Logs view on Execution page (#18907)
* fix: [CDS-82437]: Fixed overflowing of AIDA copilot on Execition page

* fix: updated snapshots

--- a/src/modules/70-pipeline/components/LogsContent/LogsContent.module.scss
+++ b/src/modules/70-pipeline/components/LogsContent/LogsContent.module.scss
@@ -23,6 +23,7 @@
   }
 
   .errorMsgs {
+    flex: 1;
     background-color: var(--grey-800);
     padding: var(--spacing-large);
     font-family: 'Roboto Mono', 'Monaco', 'Ubuntu Mono', monospace;
